--- a/30Septiembre.ipynb
+++ b/30Septiembre.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "30Septiembre.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM60DP+GgeNPwzHb3XPWjcF",
+      "authorship_tag": "ABX9TyNsPhwLA0pnn91Q80SmdUxd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,51 +51,48 @@
       "cell_type": "code",
       "metadata": {
         "id": "aBoVD1pjPt0d",
-        "outputId": "8de13bcf-acb6-4de6-804d-7cfffd46cba3",
+        "outputId": "367c1e65-db06-4287-9578-a8931bdfe57a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 425
+          "height": 306
         }
       },
       "source": [
-        "horarios=\"0000\"\n",
-        "while horarios!=\"2359\":\n",
-        "  inv=horarios[::-1]\n",
-        "  if horarios==inv:\n",
-        "    print(horarios)\n",
-        "  new=int(horarios)\n",
+        "horario=\"0000\"\n",
+        "contador=0\n",
+        "while horario!=\"2359\":\n",
+        "\n",
+        "  inv=horario[::-1]\n",
+        "  if horario==inv and int(horario[2])<=5:\n",
+        "    contador+=1\n",
+        "    print(horario[0:2],\":\",horario[2:4])\n",
+        "  new=int(horario)\n",
         "  new+=1\n",
-        "  horarios=str(new).zfill(4)"
+        "  horario=str(new).zfill(4)\n",
+        "print(\"son \",contador,\"palindromos\")"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0000\n",
-            "0110\n",
-            "0220\n",
-            "0330\n",
-            "0440\n",
-            "0550\n",
-            "0660\n",
-            "0770\n",
-            "0880\n",
-            "0990\n",
-            "1001\n",
-            "1111\n",
-            "1221\n",
-            "1331\n",
-            "1441\n",
-            "1551\n",
-            "1661\n",
-            "1771\n",
-            "1881\n",
-            "1991\n",
-            "2002\n",
-            "2112\n",
-            "2222\n",
-            "2332\n"
+            "00 : 00\n",
+            "01 : 10\n",
+            "02 : 20\n",
+            "03 : 30\n",
+            "04 : 40\n",
+            "05 : 50\n",
+            "10 : 01\n",
+            "11 : 11\n",
+            "12 : 21\n",
+            "13 : 31\n",
+            "14 : 41\n",
+            "15 : 51\n",
+            "20 : 02\n",
+            "21 : 12\n",
+            "22 : 22\n",
+            "23 : 32\n",
+            "son  16 palindromos\n"
           ],
           "name": "stdout"
         }
