--- a/Tarea10.ipynb
+++ b/Tarea10.ipynb
@@ -6,7 +6,7 @@
       "name": "Tarea10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN9i0Q9c0RLLWgxauTz7Phk",
+      "authorship_tag": "ABX9TyO16cFDiOZm+xKBcrbYzXw5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,28 +31,79 @@
         "id": "VO_2YocDYUwF"
       },
       "source": [
-        "nodos=[arbol4]\r\n",
-        "posiblesResultados=[]\r\n",
-        "\r\n",
-        "def arbolRecursividad(arbol):\r\n",
-        "  arbol=nodos.pop()\r\n",
-        "  if arbol.left!=None:\r\n",
-        "    nodos.append(arbol.left)\r\n",
-        "  if arbol.right!=None:\r\n",
-        "    nodos.append(arbol.right)\r\n",
-        "  if arbol.left==None and arbol.right==None:\r\n",
-        "    posiblesResultados.append(arbol.data)\r\n",
-        "  if len(nodos)==0:\r\n",
-        "    return \"terminado\"\r\n",
-        "  else:\r\n",
-        "    return arbolRecursividad(arbol)\r\n",
-        "\r\n",
-        "\r\n",
-        "arbolRecursividad(arbol4)\r\n",
-        "print(posiblesResultados)"
+        "class NodoArbol:\r\n",
+        "  def __init__(self, value, left=None,right=None):\r\n",
+        "    self.data=value\r\n",
+        "    self.left=left\r\n",
+        "    self.right=right"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xRWnRtPwdxnh"
+      },
+      "source": [
+        "class BinarySearchTree:\r\n",
+        " \r\n",
+        "\r\n",
+        "  def encontrar(self, arboli, nivel, nivel_max, res):\r\n",
+        "\r\n",
+        "        if arboli !=None:\r\n",
+        "            nivel+=1\r\n",
+        "            self.encontrar(arboli.left, nivel, nivel_max, res)\r\n",
+        "\r\n",
+        "            if nivel > nivel_max[0]:\r\n",
+        "\r\n",
+        "                res[0] = arboli.data\r\n",
+        "                nivel_max[0] = nivel\r\n",
+        "\r\n",
+        "            self.encontrar(arboli.right, nivel, nivel_max, res)\r\n",
+        "\r\n",
+        "  def nodoProfundo(self,arboli):\r\n",
+        "\r\n",
+        "       res = [-1]\r\n",
+        "       nivel_max = [-1]\r\n",
+        "\r\n",
+        "       self.encontrar(arboli, 0, nivel_max, res)\r\n",
+        "       return res[0]\r\n"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1_JJGgOMd3Y3",
+        "outputId": "fb49d559-f4b0-41b0-f181-0abdecd151b5"
+      },
+      "source": [
+        "arbol = NodoArbol(1)\r\n",
+        "arbol.left=NodoArbol(2)\r\n",
+        "arbol.left.right=NodoArbol(3)\r\n",
+        "arbol.left.right.left=NodoArbol(4)\r\n",
+        "arbol.right=NodoArbol(5)\r\n",
+        "\r\n",
+        "\r\n",
+        "temp=BinarySearchTree()\r\n",
+        "\r\n",
+        "print('El nodo mas profundo es', temp.nodoProfundo(arbol))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "El nodo mas profundo es 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
